# VISTA

./: .gitignore  CITATION.cff  KNOWN-ISSUES.md  LICENSE  Makefile  NAMING.md  README.md  THIRD_PARTY_NOTICES.md  requirements.txt
analysis/: README.md  _campaigns.py  _paths.py  _sched_log.py  campaigns.yaml  clean_events.py  count_drops.py  e1_figures.py  enriched_analysis.py  event_split.py  frame_funnel_fig.py  live_report.py  make_all.py  make_table2.py  make_table3.py  make_table4.py  match_events.py  policy_report.py  reproduce_spread.py  service_gaps.py  skew_report.py  tta_curve.py
analysis/weightsweep/: aggregate_runs.py  load_report.py  make_figures.py  match_events.py
app/: .gitignore  Makefile  README.md
app/src/: app_config.cpp  app_config.hpp  detection_parser.cpp  detection_parser.hpp  fps_overlay.cpp  fps_overlay.hpp  main.cpp  metrics.cpp  metrics.hpp  output_writer.cpp  output_writer.hpp  pipeline_builder.cpp  pipeline_builder.hpp
config/: README.md  camera_params.yaml  mux_default.txt  mux_sched.txt  pgie_yolo11l.txt  pgie_yolo11m.txt  pgie_yolo11n.txt  pgie_yolo11s.txt  pgie_yolo11x.txt  tracker_config.yml
docs/: 00-quickstart.md  README.md
docs/appendix/: glossary.md
docs/demo/: README.md  vista_scheduler_animation.html
docs/design/: 01-overview.md  02-deepstream-pipeline.md  03-backpressure.md  04-depth-and-stash.md  05-scheduler-internals.md  06-local-clocks.md
docs/integration/: 01-integration-guide.md  02-api-reference.md  03-pipeline-obligations.md  04-porting-checklist.md  05-troubleshooting.md
docs/reproduction/: 01-run-the-experiments.md  03-code-provenance.md
docs/usage/: 01-build.md  02-models-and-engines.md  03-cli-reference.md  04-config-reference.md  05-outputs.md  06-tuning.md
figures/: README.md  build.sh
figures/diagrams/: export.sh
figures/src/: _paths.py  make_frame_funnel.py  make_imp_concentration.py  make_latency_cdf.py  make_pipeline.py  make_tta_pareto.py
harness/: README.md  run_ablations.sh  run_baselines.sh  run_campaign.sh  run_capacity.sh  run_eval.py  run_gates.sh  run_importance_fix.sh  run_live.sh  run_skew_study.sh  timeout_sweep_cpp.py  verify_reconstruction.py  vista_env.sh
scripts/: README.md  build_engine.py  build_engines.sh  detect_cameras.sh  fetch_models.sh  make_skew_clips.py  record_replay_clips.py
vista/: CMakeLists.txt  Makefile  PAPER_DIFF.md  README.md
vista/config/: mux_vista.txt
vista/examples/minimal_pipeline/: CMakeLists.txt  Makefile  README.md  main.cpp  minimal_pgie.txt
vista/include/vista/: vista_scheduler.hpp
vista/src/: vista_scheduler.cpp
